# opanhome

./: .env.example  .gitignore  PLAN.md  README.md  activate-hermes.sh  hermes  package.json  pyproject.toml
.agents/: README.md
.agents/skills/: README.md
.beads/: .gitignore  issues.jsonl  metadata.json
client/pi_realtime/: README.md  client.env.example  client.py
client/ts_realtime/: pi-ts-client.env.example  pi-ts-client.service
docs/: realtime-client-protocol.md
hub/: __init__.py  __main__.py  config.py  runtime.py  util.py
hub/adapters/: __init__.py  interfaces.py
hub/adapters/agent/: hermes.py  hermes_streaming.py  psfn_streaming.py
hub/adapters/stt/: deepgram.py  deepgram_live.py  elevenlabs.py
hub/adapters/tts/: deepgram.py  elevenlabs.py  elevenlabs_streaming.py  fallback.py
hub/cli/: __init__.py  probe.py  run.py
hub/devices/: __init__.py  esphome_session.py  realtime_server.py  voice_flow.py  voice_runtime.py  voice_runtime_streaming.py
hub/media/: __init__.py  http_audio.py
hub/storage/: __init__.py  session_cache.py
scripts/: deploy-pi-realtime-client.sh  deploy-ts-pi-client.sh  psfn-thin-shell.mjs  run-ts-hub.sh  smoke-ts-hub.mjs  use-global-hermes.sh
src/ts/hub/: agent-runtime.ts  deepgram-live.ts  elevenlabs-stream.ts  embodied-session.test.ts  embodied-session.ts  hermes-api-model.test.ts  hermes-api-model.ts  hermes-model.ts  psfn-model.test.ts  psfn-model.ts  server.ts  (+2 more)
tests/: test_psfn_streaming.py  test_realtime_server.py  test_runtime.py  test_session_cache.py  test_voice_flow.py  test_voice_runtime.py
(+10 files in other folders)
